--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix"
   },
   "dependencies": {
+    "@elastic/apm-rum": "^5.17.0",
+    "@elastic/behavioral-analytics-javascript-tracker": "^2.1.4",
     "@elastic/react-search-ui": "^1.24.0",
     "@elastic/react-search-ui-views": "^1.24.0",
     "@elastic/search-application-client": "^8.9.0-2",
